1997-10-23  enami tsugutomo  <enami@but-b.or.jp>

	* rcs.c (RCS_checkin): Unlink temporary files stored in variable
	`tmpfile' and `changefile'.

Wed Oct 22 12:16:10 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (rcs_lockfilename): Allocate enough memory for terminating
	'\0'.

	* admin.c (admin_fileproc): Don't support '-' for ranges in "cvs
	admin -o".
	(admin): Adjust comment.

	* rcs.h (RCSVers): New field other_delta.
	* rcs.c (free_rcsvers_contents): Also free other_delta.
	(getdelta): Read newphrases from deltas into other_delta field.
	(putdelta): Write those newphrases.
	* sanity.sh (rcs-8a): New test, for this fix.
	* admin.c (admin_fileproc): If "-b" without argument, then set
	branch to NULL, not "" (uncovered by rcs-8a test).
	* rcs.c (putrcsfield_proc): Add comment about how we (mis)handle
	values in newphrases.

	* sanity.sh (reserved): Instead of looking for rcslock.pl in CVS
	distribution, just use our own equivalent.

	* rcs.c (RCS_rewrite): Call ferror before fclose to avoid "Invalid
	argument" warnings.

Mon Oct 20 00:30:16 1997  Tim Pierce  <twp@twp.tezcat.com>

	[I removed a ChangeLog entry for a change to sanity.sh (editor),
	because the actual change was not made.  With this change, CVS no
	longer runs RCS.  I'll be checking in my cleanups shortly. -kingdon]

	Librarify `ci'.
	* rcscmds.c, cvs.h (RCS_checkin): Removed.
	* rcs.c, rcs.h (RCS_checkin, RCS_getbranchpoint, RCS_addbranch,
	RCS_findlock_or_tip): New functions.  RCS_checkin completely
	rewritten to eliminate RCS 5.7; change `rcs' parameter from string
	to RCSNode, so we can update RCSNode without re-reading from
	disk.
	* checkin.c (Checkin): Updated RCS_checkin caller, moved RCS_parse
	call to before RCS_checkin.
	* import.c (add_rev): Updated caller.
	* commit.c (remove_file): Updated caller.
	(checkaddfile): Updated caller.  Parse `rcsfile' after
	calling add_rcs_file.  Free `rcsfile' instead of asserting it to
	be NULL.

	Librarify `rcs'.